fixed the gap between cercle & header + between cercle & slider

--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,8 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    top: 10px;
 }
 
 
@@ -211,14 +213,13 @@ label{
 }
 .right{
     align-items:center ;
-    margin-top: 20px;
 }
 .slider{
-    margin: 20px 0;
     position: relative;
   width: 300px;
   max-width: 800px;
   overflow: hidden;
+  top: 23px;;
 }
 
 .slider-container {
